<resources>
    <string name="app_name">Каталог</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_search">Поиск оганизации</string>
    <string name="title_settings">Настройки</string>
    <string name="title_list">Список</string>
    <string name="cities_title">Муниципалитеты</string>
    <string name="title_search_result">Результат поиска</string>
    <string name="button_search_title">Найти организацию</string>
    <string name="button_list_title">Посмотреть каталог</string>
    <string name="button_city_title">Выбрать муниципалитет</string>
    <string name="greetings_message">С чего бы ты хотел начать работу?</string>
    <string name="phone_input_hint">Номер телефона</string>
    <string name="address_input_hint">Адрес</string>
    <string name="city_input_hint">Муниципалитет</string>
    <string name="direction_input_hint">Направленность ДО</string>
    <string name="search_input_hint">Введите название</string>
    <string name="return_title">Назад</string>

    <string-array name="brew_array">
        <item>Муниципалитет</item>
        <item>Белгород</item>
    </string-array>

    <string-array name="brew_array2">
        <item>Направленность ДО</item>
        <item>Литература</item>
    </string-array>

</resources>