<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/icon_fav_selector"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_24px"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list_24px"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/title_settings" />

</menu>