<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.catalog.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.catalog.ui.favorites.FavoriteFagment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.catalog.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.catalog.ui.catalog.CatalogFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.catalog.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/search_result"
        android:name="com.example.catalog.ui.search.SearchResultFragment"
        android:label="@string/title_search_result"
        tools:layout="@layout/fragment_search_result" />

</navigation>